--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,11 +6,11 @@ assignees: ["editorenhancer"]
 body:
   - type: markdown
     attributes:
-      value: "## Thanks for taking the time to fill out this bug report!" Please enter a title above, then fill out the form below.
-        **Of note, please include screenshots where possible!**
+      value: "## Thanks for taking the time to fill out this bug report!"
   - type: markdown
     attributes:
-      value: * Please enter a title above, then fill out the form below.|
+      value: |
+        * Please enter a title above, then fill out the form below.|
         * Of note, please include screenshots where possible!
   - type: input
     id: contact
