--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,7 +10,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        * Please enter a title above, then fill out the form below.|
+        * Please enter a title above, then fill out the form below.
         * Of note, please include screenshots where possible!
   - type: input
     id: contact
